--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
   <form id="form" action="">
     <input id="input" autocomplete="off" /><button>Send</button>
   </form>
+  <button id="startPlay">Play Sound</button>
+  <button id="startRecord">Play Sound</button>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/main.js" defer></script>
 </body>
