--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <input id="input" autocomplete="off" /><button>Send</button>
   </form>
   <button id="startPlay">Play Sound</button>
-  <button id="startRecord">Play Sound</button>
+  <button id="startRecord">Start Record</button>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/main.js" defer></script>
 </body>
