Test File Cache

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
   <form id="form" action="">
     <input id="input" autocomplete="off" /><button>Send</button>
   </form>
-  <button id="startPlay">Play Sound</button>
-  <button id="startRecord">Start Record</button>
+  <input id="startPlay" value="Play Sound" type="button">
+  <input id="startRecord" value="Start Record" type="button">
   <script src="/socket.io/socket.io.js"></script>
   <script src="/main.js" defer></script>
 </body>
