--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <input id="startPlay" value="Play Sound" type="button">
   <input id="start-record" value="Start Record" type="button">
   <script src="/socket.io/socket.io.js"></script>
-  <script src="/main.js" defer></script>
+  <script src="/app.js" defer></script>
 </body>
 
 </html>
