Test File Cache

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <input id="input" autocomplete="off" /><button>Send</button>
   </form>
   <input id="startPlay" value="Play Sound" type="button">
-  <input id="start-record" value="Start Record" type="button">
+  <input id="startRecord" value="Start Record" type="button">
   <script src="/socket.io/socket.io.js"></script>
   <script src="/app.js" defer></script>
 </body>
