--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
 </head>
 
 <body>
+  <input id="startPlay" value="Play Sound" type="button">
+  <input id="stopPlay" value="Mute Sound" type="button" hidden>
+  <input id="startRecord" value="Start Record" type="button">
+  <input id="stopRecord" value="Stop Record" type="button" hidden>
   <ul id="messages"></ul>
   <form id="form" action="">
     <input id="input" autocomplete="off" /><button>Send</button>
   </form>
-  <input id="startPlay" value="Play Sound" type="button">
-  <input id="stopPlay" value="Mute Sound" type="button">
-  <input id="startRecord" value="Start Record" type="button">
-  <input id="stopRecord" value="Stop Record" type="button">
   <script src="/socket.io/socket.io.js"></script>
   <script src="/app.js" defer></script>
 </body>
