--- a/index.html
+++ b/index.html
@@ -66,12 +66,17 @@
   <input id="stopPlay" value="Mute Sound" type="button" hidden>
   <input id="startRecord" value="Start Record" type="button">
   <input id="stopRecord" value="Stop Record" type="button" hidden>
+  <canvas id="myCanvas" width="200" height="100" style="border:1px solid #c3c3c3;">
+    Your browser does not support the canvas element.
+  </canvas>
   <ul id="messages"></ul>
   <form id="form" action="">
     <input id="input" autocomplete="off" /><button>Send</button>
   </form>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="/app.js" defer></script>
+  <script src="socket.io/socket.io.js"></script>
+  <!-- <script src="canvas.js" defer></script> -->
+  <script src="app.js" defer></script>
+  <!-- <script src="play-sound.js" defer></script> -->
 </body>
 
 </html>
