--- a/index.html
+++ b/index.html
@@ -66,9 +66,12 @@
   <input id="stopPlay" value="Mute Sound" type="button" hidden>
   <input id="startRecord" value="Start Record" type="button">
   <input id="stopRecord" value="Stop Record" type="button" hidden>
-  <canvas id="myCanvas" width="200" height="100" style="border:1px solid #c3c3c3;">
-    Your browser does not support the canvas element.
-  </canvas>
+  <div style="display:inline-flex">
+    <label>Data Usage</label>
+    <div id="bandwith" style="text-align: right;border:1px solid gray; padding:2px 10px; width:20vw;">0 kB</div>
+    <label>Bpm</label>
+    <div id="bpm" style="text-align: right;border:1px solid gray; padding:2px 10px; width:20vw;">0 B/min</div>
+  </div>
   <ul id="messages"></ul>
   <form id="form" action="">
     <input id="input" autocomplete="off" /><button>Send</button>
