--- a/rtp/video.html
+++ b/rtp/video.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Ginalne WebRTC Example</title>
-    <script type="text/javascript" src="rtp/index.js" defer></script>
+    <script type="text/javascript" src="../rtp/index.js" defer></script>
 </head>
 
 <body>
