--- a/rtp/video.html
+++ b/rtp/video.html
@@ -12,7 +12,7 @@
     <video id="remoteVideo" autoplay></video>
     <div id="log">Connecting...</div>
     <div id="connection" style="color:red;">Current State</div>
-    <script src="socket.io/socket.io.js"></script>
+    <script src="../socket.io/socket.io.js"></script>
     <!-- <video id="remoteVideo" autoplay width="1024" height="720"></video> -->
 </body>
 
