--- a/rtp/video.html
+++ b/rtp/video.html
@@ -8,7 +8,7 @@
 
 <body>
     <input id="sendOffer" value="Send Offer" type="button">
-    <video id="localVideo" autoplay></video>
+    <video id="localVideo" autoplay muted></video>
     <video id="remoteVideo" autoplay></video>
     <div id="log">Connecting...</div>
     <div id="connection" style="color:red;">Current State</div>
